Add personal info in meta tags. Include base css stileshreet. (close #19)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,22 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Résumé</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="it's website about me, welcome!">
+    <meta name="subject" content="This is a cute résumé.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="white">
+    <meta property="og:description" content="&mdash; Hello! I'm C# desktop dev and responsible for the company’s website in small company in Kiev. I am passionate by web development and I want to become a .NET Core developer.">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:title" content="Alexey Andryukevich &mdash; Résumé">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://volodymyrkushnir.com/">
+    <base href="https://volodymyrkushnir.com/">
+    <title>Alexey Andryukevich &mdash; Résumé</title>
+    <link rel="me" href="https://www.facebook.com/andrukevitch.aleksei" type="text/html">
+    <link rel="me" href="mailto:alexey.andryukevich@gmail.com">
+    <link rel="me" href="tel:+380934843777">
+    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
   </head>
   <body>
     ― Hello World! &#x1F609;
