Add secondary info (close #25 )

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="me" href="mailto:alexey.andryukevich@gmail.com">
     <link rel="me" href="tel:+380934843777">
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <main>
@@ -124,6 +125,25 @@
                   <h6>Back then</h6>
                   <ul class="timeline">
                     <li>
+                      <p><strong>Pet projects</strong>, Sweet home</p>
+                      <ul>
+                        <li>
+                          <p><em>December 2017: </em><strong><a href="https://AlexeyAndryukevich.github.io/GitHubRepoFinder" rel="external" target="_blank">GitHubRepoFinder</a></strong>.</p>
+                          <p> Web application for search of Github repos, adaptive for all devices. HTML, CSS, Bootstrap, AngularJS (AJAX, WebAPI). Source files are available in my Github repo.</p>
+                        </li>        
+                        <li>
+                          <p><em>October 2017: </em><strong><a href="https://AlexeyAndryukevich.github.io/FacilityTest" rel="external" target="_blank">FacilityTest</a></strong>.</p>
+                          <p>Testing landing web page with different type of content, fully adaptive for all devices. HTML, CSS, SASS, Bootstrap, JQuery, OwlCarousel, Gulp. Source files are available in my Github repo.</p>
+                        </li>     
+                        <li>
+                          <p><em>May 2017: </em><strong><a href="https://AlexeyAndryukevich.github.io/ShabbatSnakeTest" rel="external" target="_blank">Snake</a></strong>.</p>
+                          <p>Web application of classic game, adaptive for all devices. HTML, CSS, AngularJS (game logic, markup generation). Source files are available in my Github repo.</p>
+                        </li>                 
+                      </ul>
+                    </li>
+                  </ul>
+                  <ul class="timeline">
+                    <li>
                       <p><strong><a href="https://www.liraland.ua/" rel="external" target="_blank">LIRA SAPR</a></strong>, Kiev</p>
                       <ul>
                         <li>
@@ -161,14 +181,127 @@
                 </section>
               </div>
               <div class="six wide column">
-                <!-- Languages -->
-                <!-- Skills -->
-                <!-- Character -->
-                <!-- Likes -->
-                <!-- Dislikes -->
-                <!-- Wants -->
-                <!-- Education -->
-                <!-- Articles -->
+                <section>
+                  <h3>Languages</h3>                  
+                  <ul>
+                    <li><a href="/uk-ua" rel="alternate" class="language">Ukrainian</a> (native speaker)</li>
+                    <li><a href="/ru-ru" rel="alternate" class="language">Russian</a> (native speaker)</li>
+                    <li><span class="language">English</span> (intermediate)<br></li>
+                    <li><a href="/fr-fr" rel="alternate" class="language"><span>French </span></a>(upper intermediate)</li>
+                  </ul>                  
+                </section>
+                <section>
+                  <h3>Skills</h3>
+                  <div class="column">
+                    <div class="labels">
+                      <span class="label">C#</span>
+                      <span class="label">C++/CLI</span>
+                      <span class="label">.NET</span>
+                      <span class="label">WinForms</span>
+                      <span class="label">OOP</span>
+                      <span class="label">ASP.NET MVC</span>
+                      <span class="label">EF</span>
+                      <span class="label">MS SQL</span>
+                      <span class="label">Unit testing</span>
+                      <span class="label">GIT</span>
+                      <span class="label">JIRA</span>
+                      <span class="label">HTML</span>
+                      <span class="label">CSS</span>
+                      <span class="label">Bootstrap</span>
+                      <span class="label">JavaScript</span>
+                      <span class="label">JQuery</span>
+                      <span class="label">AngularJS</span>
+                      <span class="label">Adobe Suit</span>
+                      <span class="label">MathCAD</span>
+                      <span class="label">AutoCAD</span>
+                    </div>
+                  </div>
+                </section>
+                <section class="clearfix">
+                  <h3>Character</h3>
+                  <p>Сheerful, kind, sympathetic, purposeful, orderly. I think so &#x1f914;</p>
+                </section>
+                <section>
+                  <h3>Likes</h3>
+                  <p>Jelly candies, to do something creative, education, photography, voyages.</p>
+                </section>
+                <section>
+                  <h3>Dislikes</h3>
+                  <p>Сilantro, boiled carrot, waste of time.</p>
+                </section>               
+                <section>
+                  <h3>Wants</h3>
+                  <p>To be in the right time in the right place &#x1f642;</p>
+                </section>
+                <section>
+                  <h3>Facts about me</h3>
+                  <p>Attentive for details, ten-finger typing, do dances.</p>
+                </section>
+                <section>
+                  <h3>Education</h3>
+                  <ul class="timeline">
+                    <li>
+                      <div><em>Regularly:</em></div>
+                      <p class="tags">
+                        <a href="https://msdn.microsoft.com/en-us/" rel="external" target="_blank"><strong>Microsoft MSDN</strong></a>,
+                        <a href="https://stackoverflow.com/" rel="external" target="_blank"><strong>Stackoverflow</strong></a>,
+                        <a href="https://metanit.com/" rel="external" target="_blank"><strong>Metanit</strong></a>,
+                        <a href="https://habr.com/ru/hub/programming/" rel="external" target="_blank"><strong>Habr</strong></a>,
+                        <a href="https://dou.ua/" rel="external" target="_blank"><strong>DOU</strong></a>.
+                      </p>
+                    </li>
+                    <li>
+                      <div><em>From time to time:</em></div>
+                      <p class="tags">
+                          <strong>Some programming courses</strong> like
+                          <a href="https://www.sololearn.com/" rel="external" target="_blank"><strong>Sololearn</strong></a>,
+                          <a href="https://www.youtube.com/user/agragregra" rel="external" target="_blank"><strong>WebDesign Master</strong></a>,
+                          <a href="https://itvdn.com/ru" rel="external" target="_blank"><strong>ITVDN</strong></a>,
+                          official tutorials of different technologies, etc. 
+                      </p>
+                    </li>
+                    <li>
+                      <div><em>Postgraduate:</em></div>
+                      <p><strong><a href="http://www.knuba.edu.ua/" rel="external" target="_blank">Kyiv National University of Construction and Architecture</a></strong></p>
+                      <ul>
+                        <li>
+                          <p><em>November 2014 &ndash; August 2016: </em><strong>Postgraduate at the Department of Reinforced Concrete Constructions.</strong></p>
+                        </li>                        
+                      </ul>
+                    </li>
+                    <li>
+                      <div><em>Higher education:</em></div>
+                      <p><strong><a href="https://pgasa.dp.ua/" rel="external" target="_blank">Prydniprovs’ka State Academy of Civil Engineering and Architecture</a></strong></p>
+                      <ul>
+                        <li>
+                          <p><em>September 2012 &ndash; June 2013: </em><strong>Specialist of Civil Engineering (diploma with distinction).</strong></p>
+                        </li>   
+                        <li>
+                          <p><em>September 2008 &ndash; June 2012: </em><strong>Bachelor of Civil Engineering (diploma with distinction).</strong></p>
+                        </li>                      
+                      </ul>
+                    </li>                    
+                    <li>
+                      <div><em>Schools:</em></div>
+                      <p><strong>Zaporizhia Art School for Children</strong></p>
+                      <ul>
+                        <li>
+                          <p><em>September 2007 &ndash; May 2008: </em><strong>Pencil drawing course.</strong></p>
+                        </li>                        
+                      </ul>                
+                      <p><strong>Gymnasium №50 of Zaporizhia</strong></p>
+                      <ul>
+                        <li>
+                          <p><em>September 1998 &ndash; May 2008: </em><strong>Base education.</strong></p>
+                        </li>                        
+                      </ul>
+                    </li>
+                  </ul>
+                </section>
+                <section>
+                  <h3>Articles</h3>
+                  <p>Have some articles about reinforced concrete and other construction science stuffs in some science magazines.</p>
+                </section>
               </div>
             </div>
           </div>
