Add info about freelance experience (close #31 )

--- a/index.html
+++ b/index.html
@@ -125,6 +125,32 @@
                   <h6>Back then</h6>
                   <ul class="timeline">
                     <li>
+                      <p><strong>Freelance</strong>, Somewhere</p>
+                      <ul>
+                        <li>
+                          <p><em>December 2018 &ndash; April 2019: </em><strong>UX/UI designer & Project manager</strong>.</p>
+                          <p>
+                            It's very fresh emotions, so it is a kind of novel. <br>
+                            I really like the user-friendly interfaces, beautiful design, high-quality markup. I have a lot of ideas, but this is a hobby for me. And this winter, my friend suggested that I try my strength in freelancing and make a  website for provincial dentistry together. I thought it was a good option to understand whether is design my craft or let it just remain as a hobby.<br>
+                            I even did't understand where I got involved &#x1f926; &#x200d;<br>
+                            So, freelance is primarily working directly with the client, and it is interesting but quite difficult. At first, everything went easy - we made a commercial offer (made a bad bargain, as we understood later), a calendar plan, with the help of a familiar lawyer made an agreement - all by best practices	&#x1f60e;. I made quickly a wireframe prototype in Adobe XD. But at the design stage, we began to wait a long time for the initial data from the customer &#x1f928;, which is why the process took a long time... <br>
+                            As a result, thank God, I did finish my part, the 
+                            <strong><a href="https://xd.adobe.com/view/86d759d1-20f7-4967-7a53-180dcb78d7d7-f0e6/?fullscreen">design prototype</a></strong>
+                            and now my other friend is implementing the technical part.<br>
+                            This work gave me a great experience: 
+                            <ol>
+                              <li>I realized that design is cool, but in my case, better let it remain as a hobby, of course  this will allow me to more effectively interact with designers in my work in the future;</li>
+                              <li>I went through (last stage left) the full development cycle, I learned the internal structure of the processes;</li>
+                              <li>I got a huge experience in communicating with the customer and managing the command: there are only 3 people (I, Yarik copywriter and Sanya frontend dev), but there are still a distribution of responsibilities and "merge" of the results!</li>
+                            </ol>
+                            That's all, thanks for reaning!)
+                          </p>
+                        </li>                                       
+                      </ul>
+                    </li>
+                  </ul>
+                  <ul class="timeline">
+                    <li>
                       <p><strong>Pet projects</strong>, Sweet home</p>
                       <ul>
                         <li>
