--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   </div>
                   <div class="sixteen wide column">
                     <h2>Résumé</h2>
-                    <p>For instance I am C# desktop dev and responsible for the company’s website in small company in Kiev. I am passionate by web development and I want to become a .NET Core developer.</p>
+                    <p>I'm a happy person. Also I'm C# desktop dev and responsible for the company’s website in small company in Kiev. I am passionate by web development and I want to become a .NET Core developer.</p>
                   </div>
                 </div>
               </div>
