Add link on Insta account from photorahy in Likes section

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </section>
                 <section>
                   <h3>Likes</h3>
-                  <p>Jelly candies, to do something creative, education, photography, voyages.</p>
+                  <p>Jelly candies, to do something creative, education, <a href="https://www.instagram.com/alex.andr_/" rel="external" target="_blank">photography</a>, voyages.</p>
                 </section>
                 <section>
                   <h3>Dislikes</h3>
