Add, almost, colorfull feature

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" href="./style.css">    
   </head>
   <body>
-    <main>
+    <main id="color-switcher">
       <article>
-        <div class="page" style="border-color: gray;">
+        <div class="page" style="border-color: rgb(50,128,128);">
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
