--- a/uk-ua/index.html
+++ b/uk-ua/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    under construction
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Українська сторінка</title>
+    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./style.css">   
+    <style>
+        p {
+            font-weight: 300;
+            font-size: 1.5rem;
+            margin-bottom: 0.75em;
+        }
+        main {
+            background-image: url(../assets/images/ornament.png);
+            background-position: left bottom;
+            background-repeat: repeat; 
+        }
+    </style> 
+  </head>
+  <body>
+    <main>
+      <article>
+        <div class="page" style="border-color: rgb(256,60,60);">  
+            <div class="stackable grid">            
+                <div class="sixteen wide column">
+                    <h2>Україна</h2>
+                    <p>Я дуже радий, що народився у цій дивовижній країні, де гарно, повно можливостей і не нудно))</p>
+                    <p>Також я люблю українську мову, хоч вона й не є основною для мене, я легко її розумію! Вона реально крута: іноді витончена, іноді забавна ("розчипірка" &#x1f602;), але завжда рідна. Буває використовую її коли хочу більш підкреслити ідею, а росїйською не знаю рівнозначних синонімів, наприклад "Бажаю <u>наснаги</u>!"</p>
+                    <p>Що ще добавить...? Загорецька побобається, рвать конєшно!</p>
+                    <p>Тай такє! Добре тут, але піду напевно на основну сторінку щось ще зроблю))</p>
+                </div>
+            </div>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
