add navigation between languages

--- a/ru-ru/index.html
+++ b/ru-ru/index.html
@@ -11,14 +11,23 @@
             font-size: 1.5rem;
             margin-bottom: 0.75em;
         }
+        .language-links {
+            text-align: right;
+        }
     </style> 
   </head>
   <body>
     <main>
       <article>
         <div class="page" style="border-color: rgb(50,128,128);">  
-            <div class="stackable grid">            
-                <div class="sixteen wide column">
+            <div class="stackable grid">    
+                <div>
+                    <p  class="language-links">
+                        <a href="../" rel="alternate">en</a>
+                        <a href="../uk-ua" rel="alternate">ua</a> 
+                    </p>
+                </div>    
+                <div class="sixteen wide column"> 
                     <h2>Благодарности</h2>
                     <p>Прежде всего хочу поблагодарить Кирила и Мефодия за русский алфавит, без них эта страница бы не состоялась &#x1f941;</p>
                 </div>
