--- a/uk-ua/index.html
+++ b/uk-ua/index.html
@@ -16,13 +16,22 @@
             background-position: left bottom;
             background-repeat: repeat; 
         }
+        .language-links {
+            text-align: right;
+        }
     </style> 
   </head>
   <body>
     <main>
       <article>
         <div class="page" style="border-color: rgb(256,60,60);">  
-            <div class="stackable grid">            
+            <div class="stackable grid">  
+                <div>
+                    <p  class="language-links">
+                        <a href="../" rel="alternate">en</a>
+                        <a href="../ru-ru" rel="alternate">ru</a> 
+                    </p>
+                </div>             
                 <div class="sixteen wide column">
                     <h2>Україна</h2>
                     <p>Я дуже радий, що народився у цій дивовижній країні, де гарно, повно можливостей і не нудно))</p>
