Fix colorfull feature

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <link rel="stylesheet" href="./style.css">    
   </head>
   <body>
-    <main id="color-switcher">
+    <main>
       <article>
         <div class="page" style="border-color: rgb(50,128,128);">
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
                 <div class="avatar-wrapper">
-                  <img class="avatar" src="./assets/images/avatar.png" alt="My profile photo">
+                  <img class="avatar" id="color-switcher" src="./assets/images/avatar.png" alt="My profile photo">
                 </div>
               </div>
               <div class="thirteen wide column">
