ordered css and js

--- a/ru-ru/index.html
+++ b/ru-ru/index.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8" />
     <title>Русская страница</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
-    <link rel="stylesheet" href="./style.css">   
-    <style>
-        p {
-            font-weight: 300;
-            font-size: 1.5rem;
-            margin-bottom: 0.75em;
-        }
-        .language-links {
-            text-align: right;
-        }
-    </style> 
+    <link rel="stylesheet" href="../assets/ru/css/style.css">   
   </head>
   <body>
     <main>
