--- a/uk-ua/index.html
+++ b/uk-ua/index.html
@@ -4,22 +4,8 @@
     <meta charset="UTF-8" />
     <title>Українська сторінка</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
-    <link rel="stylesheet" href="./style.css">   
-    <style>
-        p {
-            font-weight: 300;
-            font-size: 1.5rem;
-            margin-bottom: 0.75em;
-        }
-        main {
-            background-image: url(../assets/images/ornament.png);
-            background-position: left bottom;
-            background-repeat: repeat; 
-        }
-        .language-links {
-            text-align: right;
-        }
-    </style> 
+    <link rel="stylesheet" href="../assets/ua/css/style.css">   
+    <link rel="stylesheet" href="../assets/ru/css/style.css"> 
   </head>
   <body>
     <main>
