--- a/index.html
+++ b/index.html
@@ -340,6 +340,9 @@
         </div>
       </article>
     </main>
+    <footer>
+      <p><em>Thanks</em>&#x1f60a; <em>for watching and maybe even reading</em>&#x1f609; <em>of my résumé!</em></p>
+    </footer>
     <script type="text/javascript" src="./assets/en/js/script.js"></script>
   </body>
 </html>
