Fix grammar on ukrainian page

--- a/uk-ua/index.html
+++ b/uk-ua/index.html
@@ -21,8 +21,8 @@
                 <div class="sixteen wide column">
                     <h2>Україна</h2>
                     <p>Я дуже радий, що народився у цій дивовижній країні, де гарно, повно можливостей і не нудно))</p>
-                    <p>Також я люблю українську мову, хоч вона й не є основною для мене, я легко її розумію! Вона реально крута: іноді витончена, іноді забавна ("розчипірка" &#x1f602;), але завжда рідна. Буває використовую її коли хочу більш підкреслити ідею, а росїйською не знаю рівнозначних синонімів, наприклад "Бажаю <u>наснаги</u>!"</p>
-                    <p>Що ще добавить...? Загорецька побобається, рвать конєшно!</p>
+                    <p>Також я люблю українську мову, хоч вона й не є основною для мене, я легко її розумію! Вона реально крута: іноді витончена, іноді забавна ("розчипірка" &#x1f602;), але завжди рідна. Буває використовую її коли хочу більш підкреслити ідею, а російською не знаю рівнозначних синонімів, наприклад "Бажаю <u>наснаги</u>!"</p>
+                    <p>Що ще добавить...? Загорецька подобається, рвань конєшно!</p>
                     <p>Тай такє! Добре тут, але піду напевно на основну сторінку щось ще зроблю))</p>
                 </div>
             </div>
