--- a/ru-ru/index.html
+++ b/ru-ru/index.html
@@ -19,7 +19,7 @@
                 </div>    
                 <div class="sixteen wide column"> 
                     <h2>Благодарности</h2>
-                    <p>Прежде всего хочу поблагодарить Кирила и Мефодия за русский алфавит, без них эта страница бы не состоялась &#x1f941;</p>
+                    <p>Прежде всего хочу поблагодарить Кирилла и Мефодия за русский алфавит, без них эта страница бы не состоялась &#x1f941;</p>
                 </div>
                 <div class="row">
                     <div class="sixteen wide column">
@@ -32,17 +32,17 @@
                 </div>
                 <div class="sixteen wide column">
                     <h3>Теперь точно по сути))</h3>
-                    <p>В школе самыми любимыми предметами были геометрия и алгебра, именно в такой последовательности, ну и труды - мы там делали невероятные вещи!) Ах да, геометрия и алгебра, вела эти предметы Галина Дмитреиевна, слава Богу за нее)) Я много участвовал в олимпиадах и конкурсах, как-то даже в лагерь в Ялту выйграл поездку от "Кенгуру" типа собери 4 красных сертификата и езжай))</p>
+                    <p>В школе самыми любимыми предметами были геометрия и алгебра, именно в такой последовательности, ну и труды - мы там делали невероятные вещи!) Ах да, геометрия и алгебра, вела эти предметы Галина Дмитриевна, слава Богу за нее)) Я много участвовал в олимпиадах и конкурсах, как-то даже в лагерь в Ялту выиграл поездку от "Кенгуру" типа собери 4 красных сертификата и езжай))</p>
                     <p>С детства нравилось что-то создавать - труды, макеты, рисунки, подделки, в роду были строители и я подумав осознанно захотел стать архитектором, с этой целью в старших классах пошел в художку на графику.</p>
-                    <p>Но был я не самым таллантливым и старанным и богатым... и не прошел на Архитектуру, НО зато прошел на ПГС - промышленно гражданское строительство. Там и сплелись воедино все мои навыки и любимые занятия. Также я был на франко-украинском проекте - значит были профильные занятия на французском и доп интенсивное обучение языку и общение с носителями языка - студенты-иностранцы с потока, для меня это стало продолжением школьного обучения (языку). Но английсткий тоже был и немало)) Да и вся литература нормальная в основном на инглише так шо его тоже шарю))</p>
-                    <p>Вобщем сокращаясь я на 5м курсе уже работал и быстро вырос по карьерной лестнице. Делали командой Республику, Сенрал парк и прочие крутяцкие здания.</p>
-                    <p>Но кризис 2014 задушилотрасль, и я перебрался в Киев продолжив учебу в аспирантуре. "Случайно" попал к разработчикам софта в котором проектировал здания, но не прогал, а писал автоматизацию в Маткаде на1/4 ставки совмещая с учебой.</p>
-                    <p>Потом пришлось по экономической ситуации и таким себе состоянием отечественной науки взять паузу в аспирантуре и искать новую работу, в итоге меня "случайно" нашли ребята из подобной компании, но уже на позицию разработчика, так я и познакомился с C#. Первые шаги были сложными, когда уже привык быть крутым в какой-то сфере и начинаешь почти с нуля, но это хорошо! И со временем хорошо подружились и с языком и с командой.</p>
+                    <p>Но был я не самым талантливым и старательным, и богатым... и не прошел на Архитектуру, НО зато прошел на ПГС - промышленно гражданское строительство. Там и сплелись воедино все мои навыки и любимые занятия. Также я был на франко-украинском проекте - значит были профильные занятия на французском и доп интенсивное обучение языку и общение с носителями языка - студенты-иностранцы с потока, для меня это стало продолжением школьного обучения (языку). Но английский тоже был и немало)) Да и вся литература нормальная в основном на инглише, так шо его тоже шарю))</p>
+                    <p>В общем сокращаясь я на 5м курсе уже работал и быстро вырос по карьерной лестнице. Делали командой <a href="http://respublika.com.ua/" rel="external" target="_blank">Республику</a>, <a href="https://centralpark.com.ua/" rel="external" target="_blank">Сентрал парк</a> и прочие крутяцкие здания.</p>
+                    <p>Но кризис 2014 задушил отрасль, и я перебрался в Киев продолжив учебу в аспирантуре. "Случайно" попал к разработчикам софта в котором проектировал здания, но не прогал, а писал автоматизацию в Маткаде на 1/4 ставки совмещая с учебой.</p>
+                    <p>Потом пришлось по экономической ситуации и таким себе состоянием отечественной науки взять паузу в аспирантуре и искать новую работу, в итоге меня "случайно" нашли ребята из подобной компании, но уже на позицию разработчика, так я и познакомился с C#. Первые шаги были сложными, когда уже привык быть крутым в какой-то сфере и начинаешь почти с нуля, но это хорошо! И со временем хорошо подружились и с языком, и с командой.</p>
                     <p>программирование для меня как делать что-то руками в детстве, проектировать здания - я вижу результаты работы и радуюсь^_^</p>
-                    <p>И вроде все круто, но это десктоп и знакомясь больше с программированием, я понял что мне интереснее веб, мне дали отвечать за сайт компании, но там скучновато, просто новости, релизы... А когда узнал что есть .Net Core, то вообще загорелся и решил выучиться и тут как раз ваша академия.</p> 
+                    <p>И вроде все круто, но это десктоп и знакомясь больше с программированием, я понял, что мне интереснее веб, мне дали отвечать за сайт компании, но там скучновато, просто новости, релизы... А когда узнал что есть .Net Core, то вообще загорелся и решил выучиться и тут как раз ваша академия.</p> 
                     <p>Ту би кантинюед... ;)</p>
                     <h3>P.S.</h3>
-                    <p>Cпасибо что прочли, или хотяб доскролили сюда)) Что-то начал печатать и само пошло))</p>
+                    <p>Спасибо что прочли, или хотя б доскролили сюда)) Что-то начал печатать и само пошло))</p>
                 </div>
             </div>
         </div>
