Fixed grammar on english page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   </div>
                   <div class="sixteen wide column">
                     <h2>Résumé</h2>
-                    <p>I'm a happy person. Also I'm C# desktop dev and responsible for the company’s website in small company in Kiev. I am passionate by web development and I want to become a .NET Core developer.</p>
+                    <p>I'm a happy person. Also, I'm C# desktop dev and responsible for the company’s website in a small company in Kiev. I am passionate about web development and I want to become a .NET Core developer.</p>
                   </div>
                 </div>
               </div>
@@ -130,20 +130,20 @@
                         <li>
                           <p><em>December 2018 &ndash; April 2019: </em><strong>UX/UI designer & Project manager</strong>.</p>
                           <p>
-                            It's very fresh emotions, so it is a kind of novel. <br>
+                            It's very fresh emotions, so it is a kind of novel 	&#x1f58b;. So take your favorite drink 	&#x2615;, go to a cozy atmosphere and enjoy	&#x1f609;.<br>
                             I really like the user-friendly interfaces, beautiful design, high-quality markup. I have a lot of ideas, but this is a hobby for me. And this winter, my friend suggested that I try my strength in freelancing and make a  website for provincial dentistry together. I thought it was a good option to understand whether is design my craft or let it just remain as a hobby.<br>
-                            I even did't understand where I got involved &#x1f926; &#x200d;<br>
+                            I even didn't understand where I got involved &#x1f926; &#x200d;<br>
                             So, freelance is primarily working directly with the client, and it is interesting but quite difficult. At first, everything went easy - we made a commercial offer (made a bad bargain, as we understood later), a calendar plan, with the help of a familiar lawyer made an agreement - all by best practices	&#x1f60e;. I made quickly a wireframe prototype in Adobe XD. But at the design stage, we began to wait a long time for the initial data from the customer &#x1f928;, which is why the process took a long time... <br>
                             As a result, thank God, I did finish my part, the 
                             <strong><a href="https://xd.adobe.com/view/86d759d1-20f7-4967-7a53-180dcb78d7d7-f0e6/?fullscreen" rel="external" target="_blank">design prototype</a></strong>
                             and now my other friend is implementing the technical part.<br>
                             This work gave me a great experience: 
                             <ol>
-                              <li>I realized that design is cool, but in my case, better let it remain as a hobby, of course  this will allow me to more effectively interact with designers in my work in the future;</li>
+                              <li>I realized that design is cool, but in my case, better let it remain as a hobby, of course, this will allow me to more effectively interact with designers in my work in the future;</li>
                               <li>I went through (last stage left) the full development cycle, I learned the internal structure of the processes;</li>
-                              <li>I got a huge experience in communicating with the customer and managing the command: there are only 3 people (I, Yarik copywriter and Sanya frontend dev), but there are still a distribution of responsibilities and "merge" of the results!</li>
+                              <li>I got a huge experience in communicating with the customer and managing the command: there are only 3 people (me, Yarik copywriter and Sanya frontend dev), but there are still a distribution of responsibilities and "merge" of the results!</li>
                             </ol>
-                            That's all, thanks for reaning!)
+                            That's all, thanks for reading!)
                           </p>
                         </li>                                       
                       </ul>
@@ -159,7 +159,7 @@
                         </li>        
                         <li>
                           <p><em>October 2017: </em><strong><a href="https://AlexeyAndryukevich.github.io/FacilityTest" rel="external" target="_blank">FacilityTest</a></strong>.</p>
-                          <p>Testing landing web page with different type of content, fully adaptive for all devices. HTML, CSS, SASS, Bootstrap, JQuery, OwlCarousel, Gulp. Source files are available in my <a href="https://github.com/AlexeyAndryukevich/FacilityTest" rel="external" target="_blank">Github repo</a>.</p>
+                          <p>Testing landing web page with different types of content, fully adaptive for all devices. HTML, CSS, SASS, Bootstrap, JQuery, OwlCarousel, Gulp. Source files are available in my <a href="https://github.com/AlexeyAndryukevich/FacilityTest" rel="external" target="_blank">Github repo</a>.</p>
                         </li>     
                         <li>
                           <p><em>May 2017: </em><strong><a href="https://AlexeyAndryukevich.github.io/ShabbatSnakeTest" rel="external" target="_blank">Snake</a></strong>.</p>
@@ -174,7 +174,7 @@
                       <ul>
                         <li>
                           <p><em>December 2014 &ndash; April 2016: </em><strong>Engineer Analyst</strong>.</p>
-                          <p>Analytics of structural design regulations of different countries, development of algorithms for automation of analysis of reinforced concrete constructions and its realization in MathCAD.</p>
+                          <p>Analytics of structural design regulations of different countries, the development of algorithms for automation of analysis of reinforced concrete constructions and its realization in MathCAD.</p>
                         </li>                        
                       </ul>
                     </li>
@@ -187,17 +187,17 @@
                         </li>        
                         <li>
                           <p><em>December 2012 &ndash; March 2014: </em><strong>Civil Engineer (Analyst)</strong>.</p>
-                          <p>Development of analytical 3D models of buildings, analysis of constructions, creation of reinforcing instructions for constructors. Development of special analysis algorithms in MathCAD.</p>
+                          <p>Development of analytical 3D models of buildings, analysis of constructions, creation of reinforcing instructions for constructors. Development of special analysis algorithms in MathCAD. Making <a href="https://www.youtube.com/watch?v=6ckIGHEY3AU" rel="external" target="_blank">video tutorials</a> on structural analysis.</p>
                         </li>     
                         <li>
                           <p><em>July 2012 &ndash; November 2012: </em><strong>Civil Engineer (Constructor)</strong>.</p>
-                          <p>Development of building drawings of reinforced concrete constructions. Interaction with checking group. Document management.</p>
+                          <p>Development of building drawings of reinforced concrete constructions. Interaction with the checking group. Document management.</p>
                         </li>                 
                       </ul>
                     </li>
                     <li>
                       <p><em>24<sup>th</sup> August 1991</em></p>
-                      <p><strong>Get out</strong> of the maternity hospital to <strong>just independed Ukraine</strong></p>
+                      <p><strong>Get out</strong> of the maternity hospital to <strong>just independent Ukraine</strong></p>
                     </li>
                     <li>
                       <p> <a href="https://ru.wikipedia.org/wiki/%D0%90%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9_%D0%BF%D1%83%D1%82%D1%87#20_%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%B0" rel="external" target="_blank"><em>20<sup>th</sup> August 1991</em></a></p>
