Embed base.css in cause of troubles with volodymyrkushnir.com

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="me" href="https://www.facebook.com/andrukevitch.aleksei" type="text/html">
     <link rel="me" href="mailto:alexey.andryukevich@gmail.com">
     <link rel="me" href="tel:+380934843777">
-    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./assets/en/css/base.css">
     <link rel="stylesheet" href="./assets/en/css/style.css">    
   </head>
   <body>
