--- a/uk-ua/index.html
+++ b/uk-ua/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Українська сторінка</title>
-    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="../assets/en/css/base.css">
     <link rel="stylesheet" href="../assets/ua/css/style.css">   
     <link rel="stylesheet" href="../assets/ru/css/style.css"> 
   </head>
